[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Atarian/SF Atarian System Extended Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/LevelMap/3 UI/circle1.png" type="Texture" id=2]
[ext_resource path="res://Assets/LevelMap/3 UI/Star2.png" type="Texture" id=3]
[ext_resource path="res://Scences/Map/Level.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HinhTron" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NgoiSao1" type="TextureRect" parent="."]
margin_left = -15.0
margin_top = 34.0
margin_right = 25.0
margin_bottom = 74.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NgoiSao2" type="TextureRect" parent="."]
margin_left = 9.0
margin_top = 43.0
margin_right = 49.0
margin_bottom = 83.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NgoiSao3" type="TextureRect" parent="."]
margin_left = 31.0
margin_top = 33.0
margin_right = 71.0
margin_bottom = 73.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoLevel" type="Label" parent="."]
margin_left = 16.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HinhTron" to="." method="_on_HinhTron_pressed"]
